Add icons and meta tags for mobile compatibility
Added apple touch icon and mobile web app metadata.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>期待値トラッカー</title>
   <link rel="stylesheet" href="style.css" />
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon-180.png">
+　<link rel="icon" href="./assets/icon-192.png">
+　<meta name="apple-mobile-web-app-capable" content="yes">
+　<meta name="apple-mobile-web-app-title" content="期待値トラッカー">
+
 </head>
 
 <body>
@@ -102,4 +108,5 @@
 
   <script src="app.js"></script>
 </body>
+
 </html>
