Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p id="percent">達成率：0.00 %</p>
       </div>
 
-<p class="note">※期待値計算は等価換算です</p>
+<p class="note">※ボーダー表示は28交換、期待値計算は等価換算です</p>
 
       <button type="button" id="resetBtn">リセット</button>
     </section>
@@ -110,4 +110,5 @@
 </body>
 
 </html>
+
 
