--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>期待値トラッカー</title>
   <link rel="stylesheet" href="style.css" />
   
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon-180.png">
-  <link rel="icon" href="./assets/icon-192.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon-180.png?v=8">
+  <link rel="icon" href="./assets/icon-192.png?v=8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="期待値トラッカー">
 
@@ -110,5 +110,6 @@
 </body>
 
 </html>
+
 
 
