Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section class="card">
       <label>
         投資額
-        <input type="number" id="investYen" value="0" inputmode="numeric" min="0" step="500"/>
+        <input type="number" id="investYen" inputmode="numeric" min="0" step="500"/>
       </label>
 
       <div class="invest-buttons" role="group" aria-label="投資額の操作">
