--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+  >
   <title>期待値トラッカー</title>
+
   <link rel="stylesheet" href="style.css" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon-180.png?v=8">
-  <link rel="icon" href="./assets/icon-192.png?v=8">
+  <!-- iOS / Web App Icons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon-180.png?v=9">
+  <link rel="icon" type="image/png" sizes="192x192" href="./assets/icon-192.png?v=9">
+  <link rel="icon" type="image/png" sizes="512x512" href="./assets/icon-512.png?v=9">
+
+  <!-- iOS Web App -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="期待値トラッカー">
 </head>
+
 
 <body>
   <!-- ロゴ -->
