Add app version to index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       loading="eager"
     />
   </h1>
+  <p class="app-version">v1.2.3</p>
 
   <main class="container">
 
@@ -157,3 +158,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
