Update index.html to version 3.0
Updated app version to v3.0 and made various modifications to the HTML structure and content.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       loading="eager"
     />
   </h1>
-  <p class="app-version">v1.2.3</p>
+  <p class="app-version">v3.0</p>
 
   <main class="container">
 
@@ -142,7 +142,7 @@
 
     <!-- 累計 -->
     <section class="card">
-      <p id="totalSpin">累計回転数：0</p>
+      <p id="totalSpin">累計確率：0</p>
       <p id="totalInvest">累計投資：0 円</p>
       <p id="avgRate">累計回転率：0 回/k</p>
       <p id="total">累積期待値：0 玉</p>
