--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <meta name="apple-mobile-web-app-title" content="期待値トラッカー">
 </head>
 
-
 <body>
   <!-- ロゴ -->
   <h1 class="logo" aria-label="期待値トラッカー">
@@ -32,31 +31,30 @@
       loading="eager"
     />
   </h1>
-  <p class="app-version">v3.0</p>
+  <p class="app-version">Version3.1</p>
 
   <main class="container">
 
-   <!-- 機種選択 + 機種情報 -->
-<section class="card" aria-label="機種情報">
-  <div class="machine-row">
-    <label class="machine-label">
-      機種
-      <select id="machineSelect"></select>
-    </label>
+    <!-- 機種選択 + 機種情報 -->
+    <section class="card" aria-label="機種情報">
+      <div class="machine-row">
+        <label class="machine-label">
+          機種
+          <select id="machineSelect"></select>
+        </label>
 
-    <p id="infoBorder" class="equivalent-border">ボーダー：— 回/k</p>
+        <p id="infoBorder" class="equivalent-border">ボーダー：— 回/k</p>
 
-    <!-- ボーダーの下に横並び -->
-    <div class="rate-row">
-      <p id="infoJackpot">図柄揃い確率：—</p>
-      <p id="infoRush">ラッシュ突入率：—</p>
-    </div>
-  </div>
-</section>
-
+        <!-- ボーダーの下に横並び -->
+        <div class="rate-row">
+          <p id="infoJackpot">図柄揃い確率：—</p>
+          <p id="infoRush">ラッシュ突入率：—</p>
+        </div>
+      </div>
+    </section>
 
     <!-- 回転ログ -->
-    <section class="card">
+    <section class="card" id="logCard">
       <h2 class="section-title">回転ログ</h2>
 
       <div class="log-input">
@@ -67,61 +65,61 @@
 
         <div class="log-actions" role="group" aria-label="区切りの登録">
           <!-- 通常時に見える -->
-  <div class="log-actions-main" id="logActionsMain">
-    <button type="button" class="chip state" id="btnStart">開始</button>
-    <button type="button" class="chip state" id="btnHit">当たり</button>
-    <button type="button" class="chip sub" id="btnUndo">戻す</button>
-    <button type="button" class="chip clear" id="btnStop">ヤメ</button>
-  </div>
+          <div class="log-actions-main" id="logActionsMain">
+            <button type="button" class="chip state" id="btnStart">開始</button>
+            <button type="button" class="chip state" id="btnHit">当たり</button>
+            <button type="button" class="chip sub" id="btnUndo">戻す</button>
+            <button type="button" class="chip clear" id="btnStop">ヤメ</button>
+          </div>
 
-  <!-- 当たり後に見える -->
-  <div class="log-actions-after is-hidden" id="logActionsAfter">
-    <button type="button" class="chip state" id="btnTan">単発</button>
-    <button type="button" class="chip state" id="btnRushEnd">RUSH終了</button>
-    <button type="button" class="chip state" id="btnLtEnd">LT終了</button>
-    <button type="button" class="chip sub" id="btnUndo2">戻す</button>
-  </div>
+          <!-- 当たり後に見える -->
+          <div class="log-actions-after is-hidden" id="logActionsAfter">
+            <button type="button" class="chip state" id="btnTan">単発</button>
+            <button type="button" class="chip state" id="btnRushEnd">RUSH終了</button>
+            <button type="button" class="chip state" id="btnLtEnd">LT終了</button>
+            <button type="button" class="chip sub" id="btnUndo2">戻す</button>
+          </div>
 
-  <!-- 表記出玉 入力パネル（RUSH/LTの時だけ出す） -->
-  <div id="payoutPanel" class="is-hidden">
-  <label>
-    リザルト表記出玉
-    <input type="number" id="payoutNow" inputmode="numeric" />
-  </label>
-  <button type="button" class="chip state" id="btnPayoutConfirm">表記出玉を確定</button>
-  </div>
+          <!-- 表記出玉 入力パネル（RUSH/LTの時だけ出す） -->
+          <div id="payoutPanel" class="is-hidden">
+            <label>
+              リザルト表記出玉
+              <input type="number" id="payoutNow" inputmode="numeric" />
+            </label>
+            <button type="button" class="chip state" id="btnPayoutConfirm">表記出玉を確定</button>
+          </div>
 
-  <!-- 持ち玉 入力パネル（ヤメの時だけ出す） -->
- <div id="endBallsPanel" class="is-hidden">
-  <label>
-    ヤメ時の持ち玉
-    <input type="number" id="endBallsNow" inputmode="numeric" />
-  </label>
-  <button type="button" class="chip state" id="btnEndBallsConfirm">持ち玉を確定</button>
-</div>
+          <!-- 持ち玉 入力パネル（ヤメの時だけ出す） -->
+          <div id="endBallsPanel" class="is-hidden">
+            <label>
+              ヤメ時の持ち玉
+              <input type="number" id="endBallsNow" inputmode="numeric" />
+            </label>
+            <button type="button" class="chip state" id="btnEndBallsConfirm">持ち玉を確定</button>
+          </div>
+        </div>
 
-</div>
-
-      <p class="log-meta">
-  初当たり回数 /通常回転数：<span id="hitOverTotal">0 / 0</span>
-</p>
-
+        <p class="log-meta">
+          初当たり回数 /通常回転数：<span id="hitOverTotal">0 / 0</span>
+        </p>
       </div>
 
       <div class="log-list" id="logList" aria-label="ログ一覧"></div>
 
       <button type="button" id="resetLogBtn" class="chip clear log-reset-btn">
-      当日のログをリセット
+        当日のログをリセット
       </button>
-
     </section>
 
-    <!-- 期待値計算 -->
-    <section class="card">
+    <!-- 投資（仮確定） -->
+    <section class="card" id="investCard">
       <label>
-        投資額
+        投資額（今回追加分）
         <input type="number" id="investYen" inputmode="numeric" min="0" step="500"/>
       </label>
+
+      <!-- 仮確定投資 表示 -->
+      <p id="investConfirmed" class="invest-confirmed">仮確定投資：0 円</p>
 
       <div class="invest-buttons" role="group" aria-label="投資額の操作">
         <div class="invest-row">
@@ -136,8 +134,15 @@
         </div>
       </div>
 
-      <button type="button" id="calcBtn">計算</button>
+      <!-- 期待値計算はしない：投資額だけ仮確定 -->
+      <button type="button" id="calcBtn">投資額の追加</button>
+
       <p id="result" aria-live="polite"></p>
+    </section>
+
+    <!-- 期待値計算（別カード） -->
+    <section class="card" id="finalCalcCard">
+      <button type="button" id="finalCalcBtn">期待値計算</button>
     </section>
 
     <!-- 累計 -->
