--- a/index.html
+++ b/index.html
@@ -1,169 +1,515 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
-  >
-  <title>期待値トラッカー</title>
+/* =========================
+   期待値トラッカー style.css（整理版）
+   - ロゴ（爽やかブルー×イエロー）準拠
+   - 白カード + 透明感ブルー背景
+   - 機種情報は常時モバイル縦配置（PCも同じ見え方）
+   - 投資ボタンは背景固定（PC白化防止 / iPhone可読性）
+   - 押下は沈む（scale廃止）
+   - tier: 赤/青/緑/紫（gold廃止）
+   - iOS連打ズーム対策は投資ボタン領域のみ
+   ========================= */
 
-  <link rel="stylesheet" href="style.css" />
+/* ===== Theme Tokens ===== */
+:root{
+  --blue-top: #8fd3f4;
+  --blue-main: #5db9e8;
+  --blue-bottom: #3a8fc4;
 
-  <!-- iOS / Web App Icons -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/icon-180.png?v=9">
-  <link rel="icon" type="image/png" sizes="192x192" href="./assets/icon-192.png?v=9">
-  <link rel="icon" type="image/png" sizes="512x512" href="./assets/icon-512.png?v=9">
+  --card: rgba(255,255,255,0.92);
+  --card-border: rgba(15, 23, 42, 0.10);
+  --shadow: 0 14px 40px rgba(2, 6, 23, 0.18);
 
-  <!-- iOS Web App -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="期待値トラッカー">
-</head>
+  --text: #0f172a;
+  --text-sub: rgba(15, 23, 42, 0.72);
 
-<body>
-  <!-- ロゴ -->
-  <h1 class="logo" aria-label="期待値トラッカー">
-    <img
-      src="./assets/logo-ev-tracker.png"
-      alt="期待値トラッカー"
-      class="app-logo"
-      decoding="async"
-      loading="eager"
-    />
-  </h1>
-  <p class="app-version">Version3.1.1</p>
+  --field: rgba(246, 249, 252, 1);
+  --field-border: rgba(2, 6, 23, 0.12);
 
-  <main class="container">
+  --yellow: #ffd84d;
+  --yellow-deep: #f2b705;
+  --yellow-text: #5a4500;
 
-    <!-- 機種選択 + 機種情報 -->
-    <section class="card" aria-label="機種情報">
-      <div class="machine-row">
-        <label class="machine-label">
-          機種
-          <select id="machineSelect"></select>
-        </label>
+  --r-card: 18px;
+  --r-control: 14px;
+  --r-chip: 12px;
+}
 
-        <p id="infoBorder" class="equivalent-border">ボーダー：— 回/k</p>
+/* ===== Base ===== */
+body{
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  margin: 0;
+  padding: 20px;
+  background: linear-gradient(180deg, var(--blue-top) 0%, var(--blue-main) 50%, var(--blue-bottom) 100%);
+  color: var(--text);
+}
 
-        <!-- ボーダーの下に横並び -->
-        <div class="rate-row">
-          <p id="infoJackpot">図柄揃い確率：—</p>
-          <p id="infoRush">ラッシュ突入率：—</p>
-        </div>
-      </div>
-    </section>
+body::before{
+  content:"";
+  position: fixed;
+  inset: 0;
+  pointer-events: none;
+  z-index: 0;
+  background-image:
+    radial-gradient(circle at 18% 25%, rgba(255,255,255,0.55) 1.3px, transparent 3px),
+    radial-gradient(circle at 78% 55%, rgba(255,255,255,0.45) 1.2px, transparent 3px),
+    radial-gradient(circle at 55% 12%, rgba(255,255,255,0.35) 1.1px, transparent 3px),
+    radial-gradient(circle at 12% 82%, rgba(255,255,255,0.40) 1.2px, transparent 3px);
+  background-size: 240px 240px;
+  opacity: 0.25;
+}
 
-    <!-- 回転ログ -->
-    <section class="card" id="logCard">
-      <h2 class="section-title">回転ログ</h2>
+body > *{ position: relative; z-index: 1; }
 
-      <div class="log-input">
-        <label>
-          データカウンター回転数
-          <input type="number" id="counterNow" inputmode="numeric" />
-        </label>
+h1{ margin: 0 0 10px; }
 
-        <div class="log-actions" role="group" aria-label="区切りの登録">
-          <!-- 通常時に見える -->
-          <div class="log-actions-main" id="logActionsMain">
-            <button type="button" class="chip state" id="btnStart">開始</button>
-            <button type="button" class="chip state" id="btnHit">当たり</button>
-            <button type="button" class="chip sub" id="btnUndo">戻す</button>
-            <button type="button" class="chip clear" id="btnStop">ヤメ</button>
-          </div>
+/* ===== Layout ===== */
+.container{ max-width: 760px; margin: 0 auto; }
 
-          <!-- 当たり後に見える -->
-          <div class="log-actions-after is-hidden" id="logActionsAfter">
-            <button type="button" class="chip state" id="btnTan">単発</button>
-            <button type="button" class="chip state" id="btnRushEnd">RUSH終了</button>
-            <button type="button" class="chip state" id="btnLtEnd">LT終了</button>
-            <button type="button" class="chip sub" id="btnUndo2">戻す</button>
-          </div>
+.card{
+  background: var(--card);
+  border: 1px solid var(--card-border);
+  border-radius: var(--r-card);
+  padding: 16px;
+  box-shadow: var(--shadow);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  margin-bottom: 16px;
+}
 
-          <!-- 表記出玉 入力パネル（RUSH/LTの時だけ出す） -->
-          <div id="payoutPanel" class="is-hidden">
-            <label>
-              リザルト表記出玉
-              <input type="number" id="payoutNow" inputmode="numeric" />
-            </label>
-            <button type="button" class="chip state" id="btnPayoutConfirm">表記出玉を確定</button>
-          </div>
+/* ===== Logo ===== */
+.logo{
+  display:flex;
+  justify-content:center;
+  margin: 10px 0 18px;
+}
+.logo-svg{ display:inline-flex; }
+.logo-mark{
+  width: min(520px, 86vw);
+  height:auto;
+  display:block;
+}
 
-          <!-- 持ち玉 入力パネル（ヤメの時だけ出す） -->
-          <div id="endBallsPanel" class="is-hidden">
-            <label>
-              ヤメ時の持ち玉
-              <input type="number" id="endBallsNow" inputmode="numeric" />
-            </label>
-            <button type="button" class="chip state" id="btnEndBallsConfirm">持ち玉を確定</button>
-          </div>
-        </div>
+/* 画像ロゴ版を使う場合 */
+.app-logo{
+  width: min(520px, 90vw);
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  filter: drop-shadow(0 10px 28px rgba(2, 6, 23, 0.25));
+}
 
-        <p class="log-meta">
-          初当たり回数 /通常回転数：<span id="hitOverTotal">0 / 0</span>
-        </p>
-      </div>
+/* ===== Form blocks ===== */
+label{
+  display:block;
+  background: rgba(255,255,255,0.78);
+  border: 1px solid rgba(2, 6, 23, 0.10);
+  border-radius: var(--r-control);
+  padding: 12px;
+  margin-bottom: 12px;
+  color: var(--text);
+}
 
-      <div class="log-list" id="logList" aria-label="ログ一覧"></div>
+input, select{
+  width: 100%;
+  background: var(--field);
+  color: var(--text);
+  border: 1px solid var(--field-border);
+  border-radius: var(--r-chip);
+  padding: 10px;
+  font-size: 16px;
+  box-sizing: border-box;
+}
 
-      <button type="button" id="resetLogBtn" class="chip clear log-reset-btn">
-        当日のログをリセット
-      </button>
-    </section>
+input:focus, select:focus{
+  outline: none;
+  border-color: rgba(242, 183, 5, 0.55);
+  box-shadow: 0 0 0 3px rgba(255, 216, 77, 0.35);
+}
 
-    <!-- 投資（仮確定） -->
-    <section class="card" id="investCard">
-      <label>
-        投資額（今回追加分）
-        <input type="number" id="investYen" inputmode="numeric" min="0" step="500"/>
-      </label>
+/* ===== Buttons (base) ===== */
+button{
+  padding: 16px;
+  border-radius: var(--r-control);
+  border: 1px solid rgba(2, 6, 23, 0.10);
+  font-size: 16px;
+  font-weight: 800;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  box-shadow: 0 10px 24px rgba(2, 6, 23, 0.12);
+  transition: transform 0.08s ease, filter 0.12s ease, box-shadow 0.12s ease;
+  background: rgba(255,255,255,0.90); /* 保険：白化防止 */
+  color: var(--text);
+}
 
-      <!-- 仮確定投資 表示 -->
-      <p id="investConfirmed" class="invest-confirmed">仮確定投資：0 円</p>
+/* 押下は沈む（共通） */
+button:active,
+.chip:active{
+  transform: translateY(2px);
+  box-shadow: 0 4px 10px rgba(0,0,0,0.18);
+}
 
-      <div class="invest-buttons" role="group" aria-label="投資額の操作">
-        <div class="invest-row">
-          <button type="button" class="chip" id="add500">+500円</button>
-          <button type="button" class="chip" id="add1000">+1000円</button>
-          <button type="button" class="chip" id="add5000">+5000円</button>
-        </div>
+/* 計算ボタン（主役） */
+#calcBtn{
+  width: 100%;
+  margin-top: 8px;
+  background: linear-gradient(180deg, var(--yellow) 0%, var(--yellow-deep) 100%);
+  color: #4a3600;
+  border: 1px solid rgba(74, 54, 0, 0.35);
+  box-shadow: 0 4px 0 rgba(74, 54, 0, 0.35), 0 10px 24px rgba(0,0,0,0.18);
+}
 
-        <div class="invest-row">
-          <button type="button" class="chip sub" id="sub500">−500円</button>
-          <button type="button" class="chip clear" id="clearInvest">クリア</button>
-        </div>
-      </div>
+/* リセット（控えめ） */
+#resetBtn{
+  width: 100%;
+  margin-top: 24px;
+  background: rgba(255,255,255,0.86);
+  color: rgba(15, 23, 42, 0.75);
+  font-size: 14px;
+  font-weight: 700;
+  border-color: rgba(15, 23, 42, 0.14);
+  box-shadow: 0 10px 20px rgba(2, 6, 23, 0.10);
+}
+#resetBtn:active{ opacity: 0.78; }
 
-      <!-- 期待値計算はしない：投資額だけ仮確定 -->
-      <button type="button" id="calcBtn">投資額の追加</button>
+/* ===== Result ===== */
+#result, #total{
+  margin-top: 16px;
+  font-size: 18px;
+}
+#result{ white-space: pre-line; line-height: 1.5; }
 
-      <p id="result" aria-live="polite"></p>
-    </section>
+/* tier：赤/青/緑/紫のみ */
+#result.tier-bad{ color: #dc2626; }
 
-    <!-- 期待値計算（別カード） -->
-    <section class="card" id="finalCalcCard">
-      <button type="button" id="finalCalcBtn">期待値計算</button>
-    </section>
+#result.tier-blue{
+  color: #2563eb;
+  text-shadow: 0 1px 4px rgba(0,0,0,0.08);
+}
+#result.tier-green{
+  color: #16a34a;
+  text-shadow: 0 1px 4px rgba(0,0,0,0.08);
+}
+#result.tier-purple{
+  color: #7c3aed;
+  text-shadow: 0 1px 6px rgba(0,0,0,0.12);
+}
 
-    <!-- 累計 -->
-    <section class="card">
-      <p id="totalSpin">累計確率：0</p>
-      <p id="totalInvest">累計投資：0 円</p>
-      <p id="avgRate">累計回転率：0 回/k</p>
-      <p id="total">累積期待値：0 玉</p>
+/* ===== Progress ===== */
+progress{
+  width: 100%;
+  height: 18px;
+  margin-top: 8px;
+  border-radius: 999px;
+  overflow: hidden;
+}
+progress::-webkit-progress-bar{
+  background: rgba(255,255,255,0.65);
+  border-radius: 999px;
+}
+progress::-webkit-progress-value{
+  background: linear-gradient(90deg, #ffe680, var(--yellow), #f7c800);
+  border-radius: 999px;
+}
 
-      <div class="goal">
-        <p class="goal-title"></p>
-        <progress id="goalBar" value="0" max="1000000"></progress>
-        <p id="percent">達成率：0.00 %</p>
-      </div>
+/* ===== Machine info ===== */
+.machine-info{ 
+ 
+  background: rgba(216, 216, 216, 0.55);   /* ← 白を弱める */
+  border: 1px solid rgba(15,23,42,0.08);
+  border-radius: 12px;
+  padding: 10px 12px;
 
-      <p class="note">※ボーダー表示は28交換、期待値計算は等価換算です</p>
-      <button type="button" id="resetBtn">リセット</button>
-    </section>
+}
 
-  </main>
+.info-lines p{
+  margin: 8px 0;
+  color: var(--text-sub);
+}
 
-  <script src="app.js"></script>
-</body>
-</html>
+/* ★常時モバイル縦配置 */
+.machine-row{
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 6px;
+}
+.machine-label{ width: 100%; }
+
+/* 等価ボーダー */
+.equivalent-border{
+  font-size: 0.95rem;
+  color: rgba(15, 23, 42, 0.85);
+  font-weight: 600;
+  min-height: 1.4em;
+  margin: 0;
+  margin-bottom: 8px;   /* ← 図柄揃いから距離を取る */
+  margin-left: 1em;   /* ← ここがポイント */
+  padding-left: 0.2em;
+  line-height: 1.2;
+  transition: opacity 0.15s ease;
+  white-space: nowrap;
+  text-align: left;
+}
+
+.equivalent-border.is-updating{opacity: 0;}
+
+
+/* 図柄揃い確率 × RUSH突入率 */
+.rate-row{
+  display: flex;        /* ← 横並び維持 */
+  gap: 30px;
+  margin-top: 4px;      /* ← 28交換ボーダーの直下に来る */
+  margin-left: 1em;
+}
+.rate-row p{ 
+  font-size: 0.85rem;   /* ← やや小さく */
+  opacity: 0.75;        /* ← 少しだけ薄く */
+  font-weight: 500;
+  margin: 0; }
+
+/* ボーダーフェード更新 */
+.equivalent-border{ transition: opacity 0.15s ease; }
+.equivalent-border.is-updating{ opacity: 0; }
+
+/* ===== Invest buttons ===== */
+.invest-buttons{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: 12px;
+}
+.invest-row{ display: flex; gap: 8px; }
+
+.chip{
+  flex: 1;
+  padding: 14px 0;
+  border-radius: var(--r-chip);
+  border: 1px solid rgba(2, 6, 23, 0.14);
+  cursor: pointer;
+
+  /* 背景固定（白化防止） */
+  background: linear-gradient(180deg, #4fc3f7 0%, #2196f3 100%);
+  color: #ffffff;
+
+  text-shadow: 0 1px 2px rgba(0,0,0,0.25);
+  box-shadow: 0 8px 16px rgba(2, 6, 23, 0.12);
+
+  transition: transform 0.08s ease, filter 0.12s ease, box-shadow 0.12s ease;
+}
+
+.chip:hover{ filter: brightness(1.03); }
+
+.chip.sub{
+  background: linear-gradient(180deg, #f87171 0%, #dc2626 100%);
+  color: #ffffff;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.30);
+}
+
+.chip.clear{
+  background: linear-gradient(180deg, #e5e7eb 0%, #cbd5e1 100%);
+  color: #334155;
+  text-shadow: none;
+}
+
+/* iOS: 投資ボタンエリアだけダブルタップズーム等を抑止 */
+.invest-buttons,
+.invest-buttons *{
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.machine-label{
+  width: 100%;
+  box-sizing: border-box;
+}
+
+/* label の左右padding分で幅計算が崩れないようにする */
+.machine-label select{
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.note{
+  font-size: 0.75rem;
+  color: rgba(15,23,42,0.6);
+  margin-top: 6px;
+}
+
+.section-title{
+  margin: 0 0 10px;
+  font-size: 1rem;
+  opacity: 0.9;
+}
+
+.log-actions{
+  display:flex;
+  gap:8px;
+  flex-wrap: wrap;
+  margin-top: 8px;
+}
+
+.chip.state{
+  background: linear-gradient(180deg, #60a5fa 0%, #2563eb 100%);
+  color:#fff;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.22);
+}
+
+.log-meta{
+  margin: 10px 0 0;
+  color: rgba(15,23,42,0.72);
+  font-size: 0.9rem;
+}
+
+.log-list{
+  margin-top: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.log-item{
+  background: rgba(255,255,255,0.72);
+  border: 1px solid rgba(2,6,23,0.10);
+  border-radius: 14px;
+  padding: 10px 12px;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+
+.log-item small{ opacity: 0.75; }
+
+.is-hidden{ display:none !important; }
+
+/* ボタン全体の枠を固定 */
+.log-actions{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 8px;
+}
+
+/* 中の2グループは“重ねる” */
+.log-actions-main,
+.log-actions-after{
+  display: contents; /* ← ここが重要 */
+}
+
+/* すべてのボタンを均等幅に */
+.log-actions button{
+  width: 100%;
+}
+
+.is-disabled{
+  opacity: 0.55;
+  filter: grayscale(0.2);
+}
+
+#payoutPanel{margin-top: 10px;}
+#endBallsPanel{margin-top: 10px;}
+
+/* number の上下スピナーを消す */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button{
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"]{
+  -moz-appearance: textfield; /* Firefox */
+  appearance: textfield;
+}
+
+/* RUSH表記出玉 / ヤメ持ち玉 パネルは全幅にする */
+#payoutPanel,
+#endBallsPanel{
+  grid-column: 1 / -1;   /* 4列ぶん全部使う */
+  width: 100%;
+}
+
+/* パネル内の確定ボタンも全幅に */
+#payoutPanel button,
+#endBallsPanel button{
+  width: 100%;
+}
+
+input:disabled{
+  background: #e5e7eb;          /* 薄いグレー */
+  color: #6b7280;               /* 文字もグレー */
+  border-color: #cbd5e1;
+  cursor: not-allowed;
+  opacity: 0.9;
+}
+
+.app-version{
+  text-align: center;
+  font-size: 0.75rem;
+  color: rgba(15, 23, 42, 0.6);
+  margin-top: -10px;
+  margin-bottom: 12px;
+}
+
+/* 当日のログリセット（回転ログカード下） */
+.log-reset-btn{
+  width: 100%;
+  display: block;
+  margin-top: 12px;
+}
+
+/* ===== 達成率バー：段階色（最後に置く） ===== */
+progress.goal-blue::-webkit-progress-value{
+  background: linear-gradient(90deg, #60a5fa, #2563eb);
+}
+progress.goal-yellow::-webkit-progress-value{
+  background: linear-gradient(90deg, #fde68a, #f59e0b);
+}
+progress.goal-green::-webkit-progress-value{
+  background: linear-gradient(90deg, #86efac, #16a34a);
+}
+progress.goal-red::-webkit-progress-value{
+  background: linear-gradient(90deg, #fca5a5, #dc2626);
+}
+progress.goal-rainbow::-webkit-progress-value{
+  background: linear-gradient(90deg, #ef4444, #f59e0b, #eab308, #22c55e, #3b82f6, #8b5cf6);
+}
+
+/* Firefox */
+progress.goal-blue::-moz-progress-bar{
+  background: linear-gradient(90deg, #60a5fa, #2563eb);
+}
+progress.goal-yellow::-moz-progress-bar{
+  background: linear-gradient(90deg, #fde68a, #f59e0b);
+}
+progress.goal-green::-moz-progress-bar{
+  background: linear-gradient(90deg, #86efac, #16a34a);
+}
+progress.goal-red::-moz-progress-bar{
+  background: linear-gradient(90deg, #fca5a5, #dc2626);
+}
+progress.goal-rainbow::-moz-progress-bar{
+  background: linear-gradient(90deg, #ef4444, #f59e0b, #eab308, #22c55e, #3b82f6, #8b5cf6);
+}
+
+.invest-confirmed{
+  margin: 0 0 10px;
+  font-size: 0.9rem;
+  color: rgba(15,23,42,0.75);
+}
+
+/* 期待値確定ボタン（新カード側） */
+#finalCalcBtn{
+  width: 100%;
+  background: linear-gradient(180deg, var(--yellow) 0%, var(--yellow-deep) 100%);
+  color: #4a3600;
+  border: 1px solid rgba(74, 54, 0, 0.35);
+  box-shadow: 0 4px 0 rgba(74, 54, 0, 0.35), 0 10px 24px rgba(0,0,0,0.18);
+}
+
+#finalCalcBtn{
+  width: 100%;
+  background: linear-gradient(180deg, #bbf7d0 0%, #22c55e 100%);
+  color: #14532d;
+  border: 1px solid rgba(20, 83, 45, 0.3);
+  box-shadow: 0 3px 0 rgba(20, 83, 45, 0.3), 0 8px 16px rgba(0,0,0,0.15);
+}
