--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 
           <!-- 当たり後に見える -->
           <div class="log-actions-after is-hidden" id="logActionsAfter">
+            <button type="button" class="chip state" id="btnCharge">チャージ</button>
             <button type="button" class="chip state" id="btnTan">単発</button>
             <button type="button" class="chip state" id="btnRushEnd">RUSH終了</button>
             <button type="button" class="chip state" id="btnLtEnd">LT終了</button>
@@ -164,6 +165,9 @@
 
   </main>
 
-  <script src="app.js"></script>
+  <script src="./machines.js"></script>
+  <script src="./app.js"></script>
+
+
 </body>
 </html>
