--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       loading="eager"
     />
   </h1>
-  <p class="app-version">Version5.0</p>
+  <p class="app-version">Version 1.1</p>
 
   <main class="container">
 
@@ -215,6 +215,12 @@
         <span>高い</span>
       </div>
     </div>
+
+<label class="mid-balls-input">
+  現在の持ち玉
+  <input type="number" id="midBallsNow" inputmode="numeric" />
+</label>
+<button type="button" class="chip state" id="midBallsConfirm">計算</button>
 
     <div class="kv-list">
       <div class="kv-row">
