Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="log-actions-main" id="logActionsMain">
             <button type="button" class="chip state" id="btnStart">開始</button>
             <button type="button" class="chip state" id="btnHit">当たり</button>
-            <button type="button" class="chip sub" id="btnUndo">戻す</button>
+            <button type="button" class="chip undo" id="btnUndo">戻す</button>
             <button type="button" class="chip clear" id="btnStop">ヤメ</button>
           </div>
 
@@ -135,6 +135,7 @@
           <button type="button" class="chip sub" id="sub500">−500円</button>
           <button type="button" class="chip neutral" id="skipInvest">追加無し</button>
           <button type="button" class="chip clear" id="clearInvest">クリア</button>
+          <button class="chip undo" id="undoInvest">戻す</button>
         </div>
       </div>
 
